--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "dotted-map": "^2.2.3",
     "lucide-react": "^0.553.0",
     "motion": "^12.23.24",
-    "next": "16.0.1",
+    "next": "^15.2.0",
     "nodemailer": "^7.0.10",
     "react": "19.2.0",
     "react-dom": "19.2.0",
@@ -33,7 +33,7 @@
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.22",
     "eslint": "^9",
-    "eslint-config-next": "16.0.1",
+    "eslint-config-next": "^15.1.6",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.18",
     "typescript": "^5"
